<?xml version="1.0"?>
<package format="2">
  <name>nclt2ros</name>
  <version>1.0.0</version>
  <description>nclt2ros package provides ROS nodes for downloading, extracting, converting and visualizing the NCLT Dataset</description>

  <maintainer email="christian.bierschneider@web.de">christian bierschneider</maintainer>
  <author email="christian.bierschneider@web.de">christian bierschneider</author>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <exec_depend>simplekml</exec_depend>
</package>
